# speedtest_statuspage

./: .env  .gitignore  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md  build-and-run-dev.sh  build-and-run-release.sh  build-dev.sh  build-release.sh  build.sh
benches/: cache_and_api.rs
install/: install.sh
install/etc/speedtest-statuspage/: .env
package/: install.sh
package/etc/systemd/system/: speedtest-statuspage.service
src/: lib.rs  main.rs  models.rs
tests/: api_tests.rs
