[package]
name = "speedtest_statuspage"
version = "0.2.5"
edition = "2024"
authors = ["Jak Bracegirdle <jak@bracegirdle.io>"]
description = "A utility application to serve speedtest results over an HTTP endpoint."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GhostTorment/speedtest_statuspage"
readme = "README.md"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
once_cell = "1.21.3"
async-trait = "0.1.88"
serial_test = "3.2.0"
futures = "0.3.31"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cache_and_api"
harness = false
